# la2i-flask

./: .gitignore  README.md  app.py  auth_routes.py  pyproject.toml  test.py
dsa/: dsa_italian.jsonl  refined_dsa_english.jsonl  topics.txt
files/: chat_history.pdf_1.html  chat_history.pdf_2.html  end.txt  george.txt  il gufo.txt  john.txt  jokerbirot_saga.txt  jokerbirot_space_musician_en.txt  paul.txt
la2i_flask/: app.py  auth_routes.py
la2i_flask/flask_session/: tmp0ahkopiw.__wz_cache  tmp7o4o43i5.__wz_cache  tmpcx2dszbr.__wz_cache  tmpdq2csaji.__wz_cache  tmpkbvoftx7.__wz_cache  tmpmt51y_ri.__wz_cache  tmpqtcqtwgx.__wz_cache  tmptf62sooe.__wz_cache  tmpuq8xrd14.__wz_cache
la2i_flask/static/css/: chat.css
la2i_flask/templates/: chat.html  login.html
la2i_flask/utils/: MindMapGenerator.py  chat_bot_manager.py  password_utils.py  users.py
routes/: content_routes.py  credentials_routes.py  filemanagement_routes.py  mindmap_routes.py  test_routes.py  wikichat_routes.py  yla_routes.py
static/css/: chat.css  test.css  wiki_content.css  wikichat.css
static/js/: chat.js  content.js  test.js  wiki_content.js  wikichat.js
templates/: YLA.html  chat.html  content.html  login.html  test.html  wiki_content.html  wiki_contents.html  wikichat.html
utilities/: FAISS_manager.py  MindMapGenerator.py  MindMapGenerator_old.py  chat_bot_manager.py  chat_onthego.py  chromadb_manager.py  content_manager.py  credentials.py  finetuning.py  summarize_manager.py  users.json  wiki_scraping.py
utils/: chromadb_manager.py  credentials.py  finetuning.py
(+1 files in other folders)
